header with sign up button (small details like turning off hover-over todo) and fixed y-overflow:hidden which was still on from the survey mess

--- a/splash-page/style/style.css
+++ b/splash-page/style/style.css
@@ -1,7 +1,6 @@
 .survey {
     height: 100%;
     width: 100%;
-    overflow-y: hidden;
     background-color: #EFEFEF;
     padding-bottom: 10em;
 }
@@ -138,6 +137,31 @@ h1 {
 .black {
     color: #ffffff;
     background-color: #000000;
+    border-color: #000000;
+}
+
+.signup {
+    padding-left: 20px;
+    padding-right: 20px;
+    height: 50px;
+}
+
+.speakup-logo-small {
+    display: inline;
+}
+
+.speakup-logo-large {
+    display: none;
+}
+
+.right-logo {
+    margin-top: 10px;
+    margin-right: 16px;
+}
+
+.left-logo {
+    margin-top: 10px;
+    margin-left: 60px;
 }
 
 /* md bootstrap breakpoint */
@@ -147,4 +171,27 @@ h1 {
         max-height: 800px;
         min-height: 600px;
     }
+    .speakup-logo-small {
+        display: none;
+    }
+    .speakup-logo-large {
+        display: inline;
+    }
+
+    .right-logo{
+        margin-top: 8px;
+        margin-right: 48px;
+
+    }
 }
+
+/* @media (min-width:576) {
+    .right-logo {
+        margin-top: 20px;
+        margin-right: 10px;
+    }
+    .left-logo {
+        margin-top: 20px;
+        margin-left: 10px;
+    }
+} */
